# bt_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test.itch
benchmarks/: full_system_benchmark.cpp  queue_benchmark.cpp  realistic_itch_benchmark.cpp
docs/: perf_queue.md
hft-engine/: CMakeLists.txt  hft-engine.cpp  hft-engine.h  queue.cpp
hft-engine/src/core/: queue.cpp  timer.hpp
scratch/: inspect_itch.py  itch_analyzer.cpp
src/: main.cpp
src/core/: config.hpp  engine.hpp  hierarchical_bitset.hpp  object_pool.hpp  order.hpp  order_book_event.hpp  order_book_manager.hpp  orderbook.hpp  queue.hpp  timer.hpp
src/core/data/: itch_file_parser.hpp  itch_file_reader.hpp  legacy_parser.hpp
src/core/strategy/: market_maker.hpp  pairs_strategy.hpp  pnl_tracker.hpp  position_manager.hpp  strategy.hpp  virtual_matcher.hpp
src/core/types/: order.hpp  order_book_event.hpp  orderbook_memory.hpp  price_level.hpp  strategy_types.hpp
src/core/utils/: compiler.hpp  hash.hpp  taggedPtr.hpp
tests/: bitset_test.cpp  itch_parser_test.cpp  object_pool_test.cpp  orderbook_test.cpp  queue_test.cpp  spmc_queue_test.cpp  strategy_test.cpp  test_itch.cpp  timer_test.cpp  window_test.cpp
